--- a/kubernetese/RabbitMQ-Cluster/rabbitmq-ManagePanelService.yaml
+++ b/kubernetese/RabbitMQ-Cluster/rabbitmq-ManagePanelService.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rabbitmq-manage-3
-  namespace: rabbits
+  namespace: default
 spec:
   selector:
     statefulset.kubernetes.io/pod-name: rabbitmq-app-1
@@ -10,5 +10,5 @@ spec:
     - protocol: TCP
       port: 15672
       targetPort: 15672
-      nodePort: 30833
+      nodePort: 30854
   type: NodePort
