--- a/kubernetese/RabbitMQ-Cluster/rabbitmq-rbac.yaml
+++ b/kubernetese/RabbitMQ-Cluster/rabbitmq-rbac.yaml
@@ -8,24 +8,24 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: rabbitmq
 rules:
-- apiGroups: 
-    - ""
-  resources: 
-    - endpoints
-  verbs: 
-    - get
-    - list
-    - watch
+  - apiGroups:
+      - ""
+    resources:
+      - endpoints
+    verbs:
+      - get
+      - list
+      - watch
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: rabbitmq
-  namespace: rabbits
+  namespace: default
 subjects:
-- kind: ServiceAccount
-  name: rabbitmq
-  namespace: rabbits
+  - kind: ServiceAccount
+    name: rabbitmq
+    namespace: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
