--- a/kubernetese/RabbitMQ-Cluster/rabbitmq-rbac.yaml
+++ b/kubernetese/RabbitMQ-Cluster/rabbitmq-rbac.yaml
@@ -7,6 +7,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: rabbitmq
+  namespace: default
 rules:
   - apiGroups:
       - ""
