--- a/kubernetese/RabbitMQ-Cluster/rabbitmq-service.yaml
+++ b/kubernetese/RabbitMQ-Cluster/rabbitmq-service.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: rabbitmq-srv
-  namespace: default
+  name: rabbitmq
 spec:
   clusterIP: None
   ports:
@@ -13,4 +12,4 @@ spec:
       targetPort: 5672
       name: amqp
   selector:
-    app: rabbitmq-app
+    app: rabbitmq
