--- a/kubernetese/RabbitMQ-Cluster/rabbitmq-ManagePanelService.yaml
+++ b/kubernetese/RabbitMQ-Cluster/rabbitmq-ManagePanelService.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rabbitmq-manage-3
+  namespace: default
 spec:
   selector:
     statefulset.kubernetes.io/pod-name: rabbitmq-app-1
