--- a/kubernetese/RabbitMQ-Cluster/rabbitmq-configmap.yaml
+++ b/kubernetese/RabbitMQ-Cluster/rabbitmq-configmap.yaml
@@ -2,14 +2,15 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: rabbitmq-config
+  namespace: default
 data:
-  RABBITMQ_HOST: 'rabbitmq.default.svc.cluster.local'
-  RABBITMQ_PORT: '5672'
-  RABBITMQ_USERNAME: 'guest'
-  RABBITMQ_PASSWORD: 'guest'
-  RABBITMQ_MAX_RETRIES: '10'
-  RABBITMQ_TIMEOUT: '10'
-  RABBITMQ_VHOST: '/'
+  RABBITMQ_HOST: "rabbitmq.default.svc.cluster.local"
+  RABBITMQ_PORT: "5672"
+  RABBITMQ_USERNAME: "guest"
+  RABBITMQ_PASSWORD: "guest"
+  RABBITMQ_MAX_RETRIES: "10"
+  RABBITMQ_TIMEOUT: "10"
+  RABBITMQ_VHOST: "/"
 
   enabled_plugins: |
     [rabbitmq_federation,rabbitmq_management,rabbitmq_peer_discovery_k8s].
