--- a/kubernetese/RabbitMQ-Cluster/rabbitmq-rbac.yaml
+++ b/kubernetese/RabbitMQ-Cluster/rabbitmq-rbac.yaml
@@ -8,6 +8,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: rabbitmq
   namespace: default
+  namespace: default
 rules:
   - apiGroups:
       - ""
@@ -22,6 +23,7 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: rabbitmq
+  namespace: default
 subjects:
   - kind: ServiceAccount
     name: rabbitmq
