--- a/kubernetese/RabbitMQ-Cluster/rabbitmq-statefulset.yaml
+++ b/kubernetese/RabbitMQ-Cluster/rabbitmq-statefulset.yaml
@@ -99,6 +99,7 @@ spec:
         name: data
       spec:
         accessModes: ["ReadWriteOnce"]
+        storageClassName: "default"
         resources:
           requests:
             storage: 10Gi
