--- a/kubernetese/RabbitMQ-Cluster/rabbitmq-statefulset.yaml
+++ b/kubernetese/RabbitMQ-Cluster/rabbitmq-statefulset.yaml
@@ -99,7 +99,7 @@ spec:
         name: data
       spec:
         accessModes: ["ReadWriteOnce"]
-        storageClassName: "default"
+        storageClassName: "local-path"
         resources:
           requests:
             storage: 10Gi
